plugins {
    id 'com.android.application'
}

def generatedNovaIconResDir = file("$buildDir/generated/novaIcon/res")
def generatedNovaIconFile = file("$buildDir/generated/novaIcon/res/drawable-nodpi/nova_official_app_icon.png")
def encodedNovaIconFile = file('src/main/nova_app_icon.b64')

tasks.register('generateNovaAppIcon') {
    inputs.file(encodedNovaIconFile)
    outputs.file(generatedNovaIconFile)
    doLast {
        generatedNovaIconFile.parentFile.mkdirs()
        generatedNovaIconFile.bytes = Base64.decoder.decode(encodedNovaIconFile.text.replaceAll('\\s', ''))
    }
}

android {
    namespace 'com.buysloans.nova'
    compileSdk 36

    defaultConfig {
        applicationId 'com.buysloans.nova'
        minSdk 29
        targetSdk 35
        versionCode 11
        versionName '0.3.7'
        buildConfigField 'String', 'OTA_MANIFEST_URL', '"https://raw.githubusercontent.com/beaustwrt248-netizen/Buys-Mock/main/nova/nova-update.json"'
        buildConfigField 'String', 'SUPABASE_URL', '"https://ghdhairijqjqivqriigi.supabase.co"'
        buildConfigField 'String', 'SUPABASE_PUBLISHABLE_KEY', '"sb_publishable_ch49o8WRnDb8pPzowZH3Tg_XZcIbgvt"'
        buildConfigField 'String', 'CAPTCHA_ORIGIN', '"https://buyshub.me/admin/"'
        buildConfigField 'String', 'TURNSTILE_SITE_KEY', '"0x4AAAAAAEZul-Qo6dqMim2U"'
    }

    signingConfigs {
        release {
            def keyPath = System.getenv('B_AND_L_KEYSTORE_PATH')
            def storePass = System.getenv('B_AND_L_STORE_PASSWORD')
            def keyAliasEnv = System.getenv('B_AND_L_KEY_ALIAS')
            def keyPass = System.getenv('B_AND_L_KEY_PASSWORD') ?: storePass
            if (keyPath && storePass && keyAliasEnv) {
                storeFile file(keyPath)
                storePassword storePass
                keyAlias keyAliasEnv
                keyPassword keyPass
            }
        }
    }

    buildTypes {
        debug {
            applicationIdSuffix '.debug'
            versionNameSuffix '-debug'
        }
        release {
            minifyEnabled false
            signingConfig signingConfigs.release
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    sourceSets {
        main {
            res.srcDir generatedNovaIconResDir
        }
    }

    buildFeatures { buildConfig true }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

tasks.matching { it.name == 'preDebugBuild' || it.name == 'preReleaseBuild' }.configureEach {
    dependsOn tasks.named('generateNovaAppIcon')
}

dependencies {
    implementation 'androidx.core:core:1.17.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.json:json:20250517'
}
